Integration in GNOME

--- a/la-tools.desktop
+++ b/la-tools.desktop
@@ -5,10 +5,9 @@ GenericName=Skript-Starter
 GenericName[de]=Skript-Starter
 Comment=diverse Tools und Programme
 Comment[de]=diverse Tools und Programme
-Exec=/home/lukas/git/la-tools/gui.py
-Icon=/home/lukas/git/la-tools/logo265x265.png
+Exec=/usr/bin/la-tools
+Icon=la-tools
 Terminal=false
 Type=Application
 StartupNotify=false
 Categories=Utility,System,
-OnlyShowIn=GNOME;XFCE;
